# nitroc

./: .gitignore  meson.build
include/nitro/: arena.h  file.h  lex.h  types.h
src/: arena.c  file.c  lex.c  main.c
tests/lexer/: tokens.exp  tokens.nitro
